--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ p {
   border-bottom-width: 1px;
 }
 
-.navigation__container {
+.header__container {
   display: flex;
 }
 
@@ -102,7 +102,7 @@ p {
   letter-spacing: 0.03em;
 }
 
-.color-logo {
+.logo__blue {
   color: var(--accent-color);
 }
 
@@ -120,9 +120,7 @@ p {
   margin-left: auto;
 }
 
-.navigation__link-studia,
-.navigation__link-portfolio,
-.navigation__link-contacts {
+.navigation__link__active {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
@@ -134,9 +132,7 @@ p {
   padding-bottom: 32px;
 }
 
-a.navigation__link-studia::after,
-a.navigation__link-portfolio::after,
-a.navigation__link-contacts::after {
+a.navigation__link__active::after {
   content: "";
   width: 100%;
   height: 4px;
@@ -152,8 +148,7 @@ a.navigation__link-contacts::after {
   position: relative;
 }
 
-.connect__email,
-.connect__tel {
+.connect__link {
   display: flex;
   align-items: center;
   font-weight: 500;
@@ -165,9 +160,7 @@ a.navigation__link-contacts::after {
   padding-bottom: 32px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.connect__email:hover, .connect__email:focus,
-.connect__tel:hover,
-.connect__tel:focus {
+.connect__link:hover, .connect__link:focus {
   color: var(--accent-color);
 }
 
@@ -183,16 +176,6 @@ a.navigation__link-contacts::after {
   max-width: 1600px;
   margin: 0 auto;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-Img.jpg");
-}
-
-.hero__container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  align-items: center;
 }
 
 .hero__title {
@@ -230,6 +213,15 @@ a.navigation__link-contacts::after {
   margin: auto;
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+.footer__container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
 }
 
 .footer-logo {
@@ -629,20 +621,61 @@ a.navigation__link-contacts::after {
   background-color: #188ce8;
 }
 
+.section__customer {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.customers__title {
+  font-weight: 700;
+  font-size: 36px;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.customers__list {
+  display: flex;
+  gap: 30px;
+}
+
+.customers__link {
+  display: flex;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  align-items: center;
+  justify-content: center;
+  width: 170px;
+  height: 92px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.customers__link:hover, .customers__link:focus {
+  border-color: var(--accent-color);
+}
+
+.customers__icon-logo {
+  fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.customers__link:hover .customers__icon-logo, .customers__link:focus .customers__icon-logo {
+  fill: var(--accent-color);
+}
+
 .container {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
+  align-items: center;
 }
 
-.benefits {
+.section__benefits {
   padding-top: 92px;
   padding-bottom: 92px;
 }
 
-.benefits-title {
+.benefits__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -651,11 +684,11 @@ a.navigation__link-contacts::after {
   margin-bottom: 10px;
 }
 
-.benefits-item {
+.benefits__item {
   width: 270px;
 }
 
-.benefits-after-title {
+.benefits__after-title {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -663,14 +696,14 @@ a.navigation__link-contacts::after {
   margin: 0 auto;
 }
 
-.benefits-list {
+.benefits__list {
   display: flex;
   margin-left: auto;
   -moz-column-gap: 30px;
        column-gap: 30px;
 }
 
-.benefits-icons {
+.benefits__icons {
   width: 270px;
   height: 120px;
   background: #f5f4fa;
@@ -681,7 +714,7 @@ a.navigation__link-contacts::after {
   justify-content: center;
 }
 
-.activity-title {
+.activity__title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -695,11 +728,11 @@ img {
   display: block;
 }
 
-.activity-item {
+.activity__item {
   position: relative;
 }
 
-.activity-after-title {
+.activity__after-title {
   position: absolute;
   width: 100%;
   height: 70px;
@@ -716,7 +749,7 @@ img {
   background: rgba(47, 48, 58, 0.8);
 }
 
-.activity-list {
+.activity__list {
   display: flex;
   -moz-column-gap: 30px;
        column-gap: 30px;
@@ -724,7 +757,7 @@ img {
   padding-bottom: 94px;
 }
 
-.section-team {
+.section__team {
   padding-top: 94px;
   padding-bottom: 94px;
   background-color: var(--secondary-bgr-color);
@@ -732,7 +765,7 @@ img {
   margin: 0 auto;
 }
 
-.team-title {
+.team__title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -741,7 +774,7 @@ img {
   margin-bottom: 50px;
 }
 
-.team-people {
+.team__people {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.9; /* identical to box height */
@@ -750,7 +783,7 @@ img {
   margin-bottom: 10px;
 }
 
-.team-specialist {
+.team__specialist {
   font-size: 16px;
   line-height: 1.9; /* identical to box height */
   text-align: center;
@@ -759,37 +792,37 @@ img {
   margin-bottom: 16px;
 }
 
-.team-list {
+.team__list {
   display: flex;
   margin-left: auto;
   -moz-column-gap: 30px;
        column-gap: 30px;
 }
 
-.team-item {
+.team__item {
   background-color: var(--main-light-color);
 }
 
-.team-info {
+.team__info {
   padding-top: 30px;
   padding-bottom: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-soc {
+.team__soc {
   display: flex;
   justify-content: center;
   gap: 10px;
 }
 
-.team-soc-item {
+.team__soc-item {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.team-soc-link {
+.team__soc-link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -800,61 +833,14 @@ img {
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.team-soc-link:hover, .team-soc-link:focus {
+.team__soc-link:hover, .team__soc-link:focus {
   background-color: var(--accent-color);
 }
-.team-soc-link:hover .team-soc-icon, .team-soc-link:focus .team-soc-icon {
+.team__soc-link:hover .team__soc-icon, .team__soc-link:focus .team__soc-icon {
   fill: #ffffff;
 }
 
-.team-soc-icon {
-  fill: #afb1b8;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.section-customer {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.customers-title {
-  font-weight: 700;
-  font-size: 36px;
-  text-align: center;
-  margin-bottom: 50px;
-}
-
-.customers-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 170px;
-  height: 92px;
-}
-
-.customers-list {
-  display: flex;
-  gap: 30px;
-}
-
-.customers-link {
-  display: flex;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-  align-items: center;
-  justify-content: center;
-  width: 170px;
-  height: 92px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.customers-link:hover, .customers-link:focus {
-  border-color: var(--accent-color);
-}
-.customers-link:hover .icon-customers-logo, .customers-link:focus .icon-customers-logo {
-  fill: var(--accent-color);
-}
-
-.icon-customers-logo {
+.team__soc-icon {
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -944,6 +930,9 @@ img {
   transition: transform 250ms linear;
   transition: transform 250ms linear;
 }
+.portfolio-link:hover .portfolio-swim-text, .portfolio-link:hover .portfolio-swim-text {
+  transform: translateY(1px);
+}
 
 .portfolio-link {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -951,9 +940,6 @@ img {
 .portfolio-link:hover, .portfolio-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   color: var(--main-dark-color);
-}
-.portfolio-link:hover .portfolio-swim-text {
-  transform: translateY(1px);
 }
 
 .border-items,
