--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -1,9 +1,9 @@
-.benefits {
+.section__benefits {
   padding-top: 92px;
   padding-bottom: 92px;
 }
 
-.benefits-title {
+.benefits__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -12,11 +12,11 @@
   margin-bottom: 10px;
 }
 
-.benefits-item {
+.benefits__item {
   width: 270px;
 }
 
-.benefits-after-title {
+.benefits__after-title {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -24,13 +24,13 @@
   margin: 0 auto;
 }
 
-.benefits-list {
+.benefits__list {
   display: flex;
   margin-left: auto;
   column-gap: 30px;
 }
 
-.benefits-icons {
+.benefits__icons {
   width: 270px;
   height: 120px;
 
