--- a/sass/components/_portfolio-cards.scss
+++ b/sass/components/_portfolio-cards.scss
@@ -49,6 +49,10 @@
   transform: translateY(101%);
   transition: transform 250ms linear;
   transition: transform 250ms linear;
+   .portfolio-link:hover &,
+   .portfolio-link:hover & {
+  transform: translateY(1px);
+}
 }
 
 
@@ -61,9 +65,6 @@
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
   color: var(--main-dark-color);
-}
-  &:hover .portfolio-swim-text {
-  transform: translateY(1px);
 }
 }
 
