--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -6,6 +6,15 @@
   padding-bottom: 60px;
 }
 
+.footer__container{
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
+}
+
 .footer-logo {
   color: #ffffff;
 }
