--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -4,7 +4,7 @@
   border-bottom-width: 1px;
 }
 
-.navigation__container {
+.header__container {
   display: flex;
 }
 
@@ -42,7 +42,7 @@
   letter-spacing: 0.03em;
 }
 
-.color-logo {
+.logo__blue {
   color: var(--accent-color);
 }
 
@@ -58,9 +58,7 @@
   margin-left: auto;
 }
 
-.navigation__link-studia,
-.navigation__link-portfolio,
-.navigation__link-contacts {
+.navigation__link__active {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 500;
@@ -72,9 +70,7 @@
   padding-bottom: 32px;
 }
 
-a.navigation__link-studia::after,
-a.navigation__link-portfolio::after,
-a.navigation__link-contacts::after {
+a.navigation__link__active::after {
   content: "";
   width: 100%;
   height: 4px;
@@ -90,8 +86,7 @@ a.navigation__link-contacts::after {
   position: relative;
 }
 
-.connect__email,
-.connect__tel {
+.connect__link {
   display: flex;
   align-items: center;
   font-weight: 500;
