--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,19 +1,18 @@
-@import"./base/reset";
-@import"./base/common";
+@import "./base/reset";
+@import "./base/common";
 
-@import"./utils/vars";
-@import"./utils/hidden";
+@import "./utils/vars";
+@import "./utils/hidden";
 
-@import"./layouts/header";
-@import"./layouts/hero";
-@import"./layouts/footer";
-@import"./layouts/backdrop";
+@import "./layouts/header";
+@import "./layouts/hero";
+@import "./layouts/footer";
+@import "./layouts/backdrop";
+@import "./layouts/customers";
 
-@import"./components/container";
-@import"./components/benefits.scss";
-@import"./components/activity";
-@import"./components/section-team";
-@import"./components/section-customers";
-@import"./components/portfolio";
-@import"./components/portfolio-cards";
-
+@import "./components/container";
+@import "./components/benefits.scss";
+@import "./components/activity";
+@import "./components/team";
+@import "./components/portfolio";
+@import "./components/portfolio-cards";
