--- a/css/main.css
+++ b/css/main.css
@@ -88,13 +88,10 @@ p {
   color: var(--accent-color);
 }
 
-.header__logo {
+.logo {
   align-items: center;
   color: var(--main-dark-color);
   margin-right: 91px;
-}
-
-.logo {
   font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
@@ -102,7 +99,12 @@ p {
   letter-spacing: 0.03em;
 }
 
-.logo__blue {
+.blue {
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19; /* identical to box height */
+  letter-spacing: 0.03em;
   color: var(--accent-color);
 }
 
